@@ -1,4 +1,5 @@
-﻿- Reset skipping file path to default when path is empty
+﻿- Reset skipping file path to default when path is empty or invalid
+- Add 'reset to default path' buttons for skip files and reports
 - Update AlgernonCommons
 
 
